PR c++/91740 - ICE with constexpr call and ?: in ARRAY_REF.

* pt.c (build_non_dependent_expr): Call build_non_dependent_expr for
	the first operand.

	* g++.dg/cpp1y/var-templ63.C: New test.

From-SVN: r275736